syntax = "proto3";

package com.virtuslab.vss.proto;

message HashPasswordMessage {
  string hashType = 1;
  string password = 2;
}

message HashedPasswordMessage {
  string hashType = 1;
  string password = 2;
  string hash = 3;
}

service HashPasswordService {
  rpc HashPassword (HashPasswordMessage) returns (HashedPasswordMessage) {}
}